# note_book

./: CMakeLists.txt  README.md  book.adoc  book.html
C++/: C++常见知识点.adoc  algorithm.adoc  gdb.adoc  宏定义.adoc  常用编程语句.adoc  常见问题.adoc  模板编程.adoc  问题排查.adoc
C++知识点总结/: C++常见知识点.adoc  C++常见知识点总结.md  gdb.adoc  常用编程语句.adoc  常见问题.adoc  模板编程.adoc  高性能相关.adoc
C++面试/: C++常见知识点总结.md
Linux/: Linux二进制分析.adoc  Linux系统编程.adoc  linux_command.adoc  性能优化.adoc  操作系统.adoc  深入理解Linux内核.adoc  高性能相关.adoc
MQ/: RocketMQ.adoc  kafka.adoc  kafka.md  消息中心.adoc  消息队列.adoc
RPC/: RPC.adoc  RPC.md
book/: drawio.xml  mkdoc.bat
go/: go_embed.md  go常见知识点.md  go常见问题.adoc  go语言基础.adoc  内存管理.adoc
go/design_pattern/BehavioralPattern/ChainOfResponsibility/: ChainOfResponsibility.go
go/design_pattern/BehavioralPattern/Command/: Command.go
go/design_pattern/BehavioralPattern/Interpreter/: Interpreter.go
go/design_pattern/BehavioralPattern/Iterator/: Iterator.go
go/design_pattern/BehavioralPattern/Mediator/: Mediator.go
go/design_pattern/BehavioralPattern/Memento/: Memento.go
go/design_pattern/BehavioralPattern/Observer/: Observer.go
go/design_pattern/BehavioralPattern/State/: State.go
go/design_pattern/BehavioralPattern/Strategy/: Strategy.go
go/design_pattern/BehavioralPattern/TemplateMethod/: TemplateMethod.go
go/design_pattern/BehavioralPattern/Visitor/: Visitor.go
go/design_pattern/CreationalPatterns/AbstractFactory/: AbstractFactory.go
go/design_pattern/CreationalPatterns/Builder/: Builder.go
go/design_pattern/CreationalPatterns/FactoryMethod/: FactoryMethod.go
go/design_pattern/CreationalPatterns/Prototype/: Prototype.go
go/design_pattern/CreationalPatterns/SimpleFactoryPattern/: SimpleFactoryPattern.go
go/design_pattern/CreationalPatterns/Singleton/: singleton.go
go/design_pattern/StructuralPattern/Adapter/: Adapter.go
go/design_pattern/StructuralPattern/Bridge/: Bridge.go
go/design_pattern/StructuralPattern/Composite/: Composite.go
go/design_pattern/StructuralPattern/Decorator/: Decorator.go
go/design_pattern/StructuralPattern/Facade/: Facade.go
go/design_pattern/StructuralPattern/Flyweight/: Flyweight.go
go/design_pattern/StructuralPattern/Proxy/: Proxy.go
inc/: Interface.h  spinlock_mutex.h
inc/nlohmann/: json.hpp
inc/thread/: thread_pool_simple.h
inc/track_new/: track_new.h
src/: CMakeLists.txt  extern.cpp  main.cpp
src/C++/: CMakeLists.txt
src/C++/elf_parser/: elf_parser.cpp  elf_parser.h  main.c
src/C++/exception_sample/: exception_sample.cpp  exception_sample.h
src/C++/mutex/: ab_mutex.cpp
src/C++/stack_frames/: stack_frames.cpp
src/algorithm/: CMakeLists.txt  binary_search.cpp  bst_search.cpp  bubble_sort.cpp  bucket_sort.cpp  count_sort.cpp  fibonacci_search.cpp  heap_sort.cpp  insert_sort.cpp  insertion_search.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  select_sort.cpp  sequential_search.cpp  shell_sort.cpp  skip_list.cpp
src/algorithm/lru_cache/: lru_cache.cpp
src/allocator/: CMakeLists.txt  allocator.cpp  allocator.h
src/db/: db.c  db_example.cpp
src/defer/: defer.cpp
src/elf_parser/: a.out  elf_parser.c  elf_parser.cpp  elf_parser.h  elf_parser32.c
src/ftrace/: ftrace.h
src/linux/: CMakeLists.txt
src/linux/ftrace/: ftrace.c
src/linux/track_new/: CMakeLists.txt  track_new.cpp
src/log/: log_stream.h
src/lru_cache/: lru_cache.cpp
src/memory/: CMakeLists.txt  virtual_memory_layout.cpp
src/memory_management/: memory_management.cpp  memory_management.h
src/network/: CMakeLists.txt  syn_flood.cpp
src/redis/03/: 03_server.cpp
src/redis/04/: 04_client.cpp  04_server.cpp
src/redis/06/: 06_client.cpp  06_server.cpp
src/redis/07/: 07_server.cpp
src/redis/08/: 08_server.cpp  hashtable.cpp  hashtable.h
src/redis/09/: 09_client.cpp  09_server.cpp
src/redis/10/: avl.cpp  avl.h  test_avl.cpp
src/redis/11/: 11_server.cpp  common.h  hashtable.cpp  hashtable.h  test_cmds.py  test_offset.cpp  zset.cpp
src/redis/12/: 12_server.cpp  zset.h
src/redis/13/: 13_server.cpp  avl.h
src/redis/14/: 14_server.cpp  avl.cpp  heap.cpp  thread_pool.cpp  thread_pool.h
src/semaphore/: semaphore.cpp
src/smart_ptr/: CMakeLists.txt  weak_ptr.cpp
src/stack_frames/: stack_frames.cpp
src/thread/: thread_pool_simple.h
src/tracer/: tracer.c  tracer2.c  tracer_test.c
src/utils/: CMakeLists.txt  int64to128.cpp
src/utils/gdb/: gdbinit.sh
tcpdump/: tcpdump.md
utils/: Makefile.adoc  asciidoc_manual.adoc  bash.adoc  cmakelists.adoc  git.adoc  google_search.adoc  plantuml.adoc  序列化.adoc  技术文档写作模板.adoc
utils/data/: fake_data.csv
utils/data/PlantUML/: README.md
utils/data/PlantUML/时序图/: check_file_info.puml  etcd_restart.puml  mirror.puml  proxy.puml  tcp-break.wsd
utils/data/PlantUML/类图/: calss_generics.pu
分布式/: docker.adoc  etcd.adoc  etcd.md  glusterfs.adoc  分布式常见知识点.adoc
数据库/: MySQL.md  db_tutorial.adoc  redis.md
算法/: forward_error_correction.adoc  二维码生成原理.adoc  常用算法.adoc  常见算法.adoc  设计模式.adoc
网络/: HTTP.adoc  QUIC.adoc  epoll.adoc  gRPC.adoc  net_tools.adoc  tcp.adoc  tcpdump.adoc  websocket.adoc  wireshark.adoc  深入理解Linux网络.adoc  网络常见知识点.adoc
